--- a/src/main/java/Examen_1_Estructura_Datos_Java/SodaFide.form
+++ b/src/main/java/Examen_1_Estructura_Datos_Java/SodaFide.form
@@ -71,29 +71,25 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Component id="jLabel5" max="32767" attributes="0"/>
-                                          <Component id="jLabel4" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="jLabel3" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="jLabel2" alignment="0" min="-2" pref="92" max="-2" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Component id="nombreFill" max="32767" attributes="0"/>
-                                          <Component id="cedulaFill" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="productoFill" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="totalFill" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
-                                          <Component id="cantCubiertosFill" alignment="0" max="32767" attributes="0"/>
-                                      </Group>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="jLabel5" max="32767" attributes="0"/>
+                                      <Component id="jLabel4" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="jLabel3" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="jLabel2" alignment="0" min="-2" pref="92" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="anadirBtn" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="preferencialBtn" alignment="1" max="32767" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="nombreFill" max="32767" attributes="0"/>
+                                      <Component id="cedulaFill" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="productoFill" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="totalFill" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
-                              <Component id="atenderBtn" min="-2" pref="211" max="-2" attributes="0"/>
-                              <Component id="cantCubiertos" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="anadirBtn" alignment="0" max="32767" attributes="0"/>
+                              <Component id="preferencialBtn" alignment="1" max="32767" attributes="0"/>
+                              <Component id="atenderBtn" max="32767" attributes="0"/>
                           </Group>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Group type="102" attributes="0">
@@ -112,7 +108,7 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="28" max="32767" attributes="0"/>
+                  <EmptySpace pref="50" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -128,8 +124,7 @@
                   </Group>
                   <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jScrollPane2" max="32767" attributes="0"/>
-                      <Group type="102" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="nombreFill" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -146,11 +141,6 @@
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="cantCubiertos" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="cantCubiertosFill" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="totalFill" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
@@ -158,12 +148,13 @@
                           <Component id="anadirBtn" min="-2" pref="42" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="preferencialBtn" min="-2" pref="42" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
                           <Component id="atenderBtn" min="-2" pref="42" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="jScrollPane3" max="32767" attributes="0"/>
+                      <Component id="jScrollPane3" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jScrollPane2" alignment="0" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="78" max="32767" attributes="0"/>
+                  <EmptySpace pref="62" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -367,24 +358,6 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Trastes"/>
           </Properties>
-        </Component>
-        <Component class="javax.swing.JLabel" name="cantCubiertos">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="14" style="1"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Cubiertos"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="cantCubiertosFill">
-          <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="d3" green="d3" red="d3" type="rgb"/>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cantCubiertosFillActionPerformed"/>
-          </Events>
         </Component>
       </SubComponents>
     </Container>
